# expense-saas

./: .env.example  .eslintignore  .gitignore  ACCOUNTING_MEMO_SPEC.md  ACCOUNT_REPORT.md  API_DOCUMENTATION.md  APPROVAL_IMPLEMENTATION_GUIDE.md  APPROVAL_RULES.md  ATTACHMENT_FEATURE.md  BACKEND_SEPARATION_STATUS.md  CHANGELOG_2026-01-10.md  CHANGELOG_2026-05-03-04.md  CLAUDE.md  DEV_PROD_STRATEGY.md  EXPENSE_DOWNLOAD_PRINT_ANALYSIS.md  IMPLEMENTATION_CHECKLIST.md  MOBILE_UI_IMPROVEMENT.md  PRD.md  PRD_BACKEND_REMAINDER.md  PRD_EXPENSE_SYSTEM_MVP.md  PRD_FRONTEND_CUTOVER.md  PRD_SAAS_MULTITENANT.md  PWA_GUIDE.md  README.md  REFACTORING_ANALYSIS.md  REFACTORING_PHASE1_SUMMARY.md  REFACTORING_PHASE2_SUMMARY.md  REFACTORING_PHASE3_SUMMARY.md  SPEC-RECURRING-EXPENSE-UI.md  SPEC.md  SPEC_COMPANY_ADMIN.md  SPEC_LOGIN_SECURITY_FIX.md  SPEC_MULTI_TENANCY.md  SPEC_SIMPLE_EXPENSE_IMPROVEMENT.md  TESTING_GUIDE.md  TESTING_SETUP_SUMMARY.md  check_db_full.ts  check_db_temp.ts  eslint.config.mjs  middleware.ts  (+27 more)
backend/: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml  render.yaml
backend/alembic/: env.py
backend/tests/: conftest.py  test_admin_notifications_routes.py  test_admin_offerings_routes.py  test_admin_roles_invitations_routes.py  test_admin_routes.py  test_approval_ext.py  test_approval_line_preview_route.py  test_approval_routes.py  test_approvals_list_routes.py  test_attachment_routes.py  test_auth_kakao_routes.py  test_auth_remainder_routes.py  test_auth_routes.py  test_budget_master_routes.py  (+29 more)
(+984 files in other folders)
