[project]
name = "expense-api"
version = "0.1.0"
description = "Expense SaaS — FastAPI backend (Phase 0 scaffolding)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",           # PostgreSQL 비동기 (운영)
    "aiosqlite>=0.20.0",         # SQLite 비동기 (로컬/개발)
    "psycopg2-binary>=2.9.0",    # PostgreSQL 동기 (Alembic 마이그레이션)
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",            # passlib 대신 직접 사용 (passlib 미유지보수, bcrypt 5.x 비호환)
    "cuid2>=2.0.0",              # Prisma cuid() 호환 ID 생성 (기존 데이터 ID 보존)
    "python-multipart>=0.0.9",
    "cloudinary>=1.45.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["expense_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
